--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	background-color: #D9D3D8;
 }
@@ -5,19 +9,20 @@ body {
 header {
 	background-color: steelblue;
 	padding: 1.4em 1.2em;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 .container{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
+
 
 .container h1 {
 	padding-left: 1.4em;
-}
-
-.container h1 a{
 	font-size: 1.4em;
 	font-weight: bold;
 	font-family: Calibri;
@@ -57,7 +62,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    padding: 105px 30px 30px 30px;
     background-color: #D9D3D8;
 }
 
@@ -115,7 +120,7 @@ header {
 .acerca-de-mi {
     display: flex;
 	flex-direction: row-reverse;
-    padding: 30px;
+    padding: 105px 30px 30px 30px;
     background-color: #BBDEFB;
 }
 
@@ -144,7 +149,7 @@ header {
 }
 
 .habilidades {
-	padding-top: 1.2em;
+	padding-top: 105px;
 }
 
 .lenguajes {
@@ -181,7 +186,7 @@ header {
 }
 
 .hobbies {
-	padding-top: 20px;
+	padding-top: 105px;
 	background: #BBDEFB;
 }
 
@@ -198,7 +203,7 @@ header {
 }
 
 .formacion {
-	padding: 30px 0 30px 0;
+	padding: 105px 0 30px 0;
 }
 
 .lista-estudios {
@@ -226,7 +231,7 @@ header {
 }
 
 .proyectos {
-    padding: 30px 30px;
+    padding: 105px 30px 30px 30px;
     background-color: #BBDEFB;
 }
 
@@ -275,7 +280,7 @@ header {
 }
 
 .contacto {
-	padding: 30px 0;
+	padding: 105px 0 30px 0;
 }
 
 form{
@@ -322,7 +327,32 @@ form label, form legend {
     background: #111651;
 }
 
+footer {
+    text-align: center;
+    background-color: steelblue;
+    padding: 20px;
+}
+
+.copyright {
+    color: #ffffff;
+    font-size: 12px;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: bold;
+    margin: 20px;
+
+}
+
+footer img {
+	width: 17%;
+	mix-blend-mode: multiply;
+}
+
 @media screen and (max-width: 960px) {
+	header {
+		position: relative;
+		width: auto;
+	}
+
 	.headerPrincipal-nav {
 		display: none;
 	}
@@ -430,5 +460,9 @@ form label, form legend {
 
 	.input-padron, .enviar {
 		width: 80%;
+	}
+
+	footer img {
+		width: 40%;
 	}
 }
